--- a/resource.rc
+++ b/resource.rc
@@ -14,8 +14,8 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 3,0,0,0
- PRODUCTVERSION 3,0,0,0
+ FILEVERSION    1,0,1,6
+ PRODUCTVERSION 1,0,1,6
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x9L
@@ -30,14 +30,14 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "ZeroTier Networks LLC"
-            VALUE "FileDescription", "ZeroTier One Virtual Network Port"
-            VALUE "FileVersion", "3.0.0 3/0"
-            VALUE "InternalName", "zttap300.sys"
-            VALUE "LegalCopyright", "ZeroTier, Inc., OpenVPN Technologies, Inc."
-            VALUE "OriginalFilename", "zttap300.sys"
-            VALUE "ProductName", "ZeroTier One Virtual Network Port"
-            VALUE "ProductVersion", "3.0.0 3/0"
+			VALUE "FileVersion",    "1.0.1 6/0"
+			VALUE "ProductVersion", "1.0.1 6/0"
+            VALUE "CompanyName", "Westgate Cyber Security Limited"
+            VALUE "FileDescription", "Enclave Virtual Network Port"
+            VALUE "InternalName", "enclavetap6.sys"
+            VALUE "LegalCopyright", "Westgate Cyber Security Limited"
+            VALUE "OriginalFilename", "enclavetap6.sys"
+            VALUE "ProductName", "Enclave Virtual Network Port"
         END
     END
     BLOCK "VarFileInfo"
